// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavigationBar Loading 1`] = `
<div
  style={
    Object {
      "height": "5000px",
    }
  }
>
  <header
    className="NavigationBarSkeleton__StyledSkeleton-sc-1g8mcqk-0 fsXiYN"
  >
    <div
      className="NavigationBarSkeleton__StyledLeft-sc-1g8mcqk-1 gWfcAH"
    >
      <div />
      <div>
        <em />
        <span />
      </div>
    </div>
    <div
      className="NavigationBarSkeleton__StyledRight-sc-1g8mcqk-2 jaHuu"
    >
      <div>
        <span />
        <span />
        <span />
      </div>
      <i>
        |
      </i>
      <em />
      <div>
        <em />
        <span />
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots NavigationBar Normal 1`] = `
<div
  style={
    Object {
      "height": "auto",
    }
  }
>
  <nav
    className="NavigationBar__StyledNavigation-sc-8hnjeq-0 cvsREZ"
  >
    <div
      className="NavigationBar__NavigationLeft-sc-8hnjeq-1 BnMzB"
    >
      <div
        className="NavigationBar__StyledDropdown-sc-8hnjeq-9 lkRUbB"
      >
        <div
          className="Dropdown__StyledDropdown-sc-103yhtj-0 cUjIHn"
        >
          <div
            className="Dropdown__StyledLabel-sc-103yhtj-1 gOugPm"
            onClick={[Function]}
          >
            <div
              className="NavigationBar__StyledMenu-sc-8hnjeq-4 gGKFmg"
            >
              <svg
                className="Icon__StyledIcon-xqsk8h-0 iMEaiu"
                data-name="IconMove"
                preserveAspectRatio="xMidYMid meet"
                size="large"
                theme={
                  Object {
                    "animations": Object {
                      "dropDownDisplay": Keyframes {
                        "id": "sc-keyframes-kPjJpX",
                        "inject": [Function],
                        "name": "kPjJpX",
                        "rules": Array [
                          "@-webkit-keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                          "@keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                        ],
                        "toString": [Function],
                      },
                      "loader": Keyframes {
                        "id": "sc-keyframes-ivfYaJ",
                        "inject": [Function],
                        "name": "ivfYaJ",
                        "rules": Array [
                          "@-webkit-keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                          "@keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        ],
                        "toString": [Function],
                      },
                      "loaderInner": Keyframes {
                        "id": "sc-keyframes-dkFWMP",
                        "inject": [Function],
                        "name": "dkFWMP",
                        "rules": Array [
                          "@-webkit-keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                          "@keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                        ],
                        "toString": [Function],
                      },
                      "loading": Keyframes {
                        "id": "sc-keyframes-kvsyCu",
                        "inject": [Function],
                        "name": "kvsyCu",
                        "rules": Array [
                          "@-webkit-keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                          "@keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                        ],
                        "toString": [Function],
                      },
                      "rotate": Keyframes {
                        "id": "sc-keyframes-iVXCSc",
                        "inject": [Function],
                        "name": "iVXCSc",
                        "rules": Array [
                          "@-webkit-keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                          "@keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        ],
                        "toString": [Function],
                      },
                    },
                    "breakpoints": Array [
                      "544px",
                      "768px",
                      "1012px",
                      "1280px",
                    ],
                    "color": Object {
                      "aubergine100": "#F4EFF1",
                      "aubergine200": "#EFDDE3",
                      "aubergine300": "#E4C7D0",
                      "aubergine400": "#C2A4B6",
                      "aubergine500": "#A888A3",
                      "aubergine600": "#775175",
                      "aubergine700": "#512B58",
                      "aubergine800": "#2C003E",
                      "aubergine900": "#1D0A25",
                      "carabinero100": "#F7E2D7",
                      "carabinero200": "#FFD5C8",
                      "carabinero300": "#FDC0AC",
                      "carabinero400": "#EAA798",
                      "carabinero500": "#E1897F",
                      "carabinero600": "#CE7070",
                      "carabinero700": "#B85959",
                      "carabinero800": "#943939",
                      "carabinero900": "#732929",
                      "carrot100": "#FFECDD",
                      "carrot200": "#F2DBC8",
                      "carrot300": "#F9CDAD",
                      "carrot400": "#EDBE96",
                      "carrot500": "#E7AA71",
                      "carrot600": "#D99455",
                      "carrot700": "#CC7D34",
                      "carrot800": "#B56820",
                      "carrot900": "#934B09",
                      "charcoal200": "#FAFBFC",
                      "charcoal300": "#EFF2F7",
                      "charcoal400": "#DCDFE6",
                      "charcoal500": "#B6BBC6",
                      "charcoal600": "#747D93",
                      "charcoal700": "#363C4B",
                      "charcoal800": "#212632",
                      "emerald100": "#EEF8F6",
                      "emerald500": "#55BAA9",
                      "emerald600": "#299B9A",
                      "forest100": "#D7ECEA",
                      "forest200": "#BCDBD9",
                      "forest300": "#9BCFCC",
                      "forest400": "#6BB0AC",
                      "forest500": "#24A49B",
                      "forest600": "#1B817A",
                      "forest700": "#0E504C",
                      "forest800": "#09332C",
                      "forest900": "#021512",
                      "golden100": "#FEF9E7",
                      "golden200": "#FDF0C7",
                      "golden300": "#FAE5A0",
                      "golden400": "#FFDE72",
                      "golden500": "#FAD046",
                      "golden600": "#F2BF12",
                      "golden700": "#DDAF11",
                      "golden800": "#CCA009",
                      "golden900": "#AF8904",
                      "ocean100": "#E4FAFF",
                      "ocean200": "#CAF0F8",
                      "ocean300": "#ADE8F4",
                      "ocean400": "#90D8EF",
                      "ocean500": "#48B5E4",
                      "ocean600": "#008BC7",
                      "ocean700": "#0077B6",
                      "ocean800": "#023E8A",
                      "ocean900": "#03045E",
                      "primary100": "#EFF7FB",
                      "primary300": "#48AAF1",
                      "primary500": "#1778FB",
                      "primary700": "#0C1B7A",
                      "redclay100": "#FAEDEC",
                      "redclay500": "#CD4C41",
                      "redvelvet": "#B2314A;",
                      "sangria500": "#B2314A",
                      "sangria600": "#972139",
                      "white": "#FFFFFF",
                    },
                    "components": Object {
                      "accordionBorder": "1px solid #EFF2F7",
                      "accordionColor": "#747D93",
                      "accordionHeaderFontSize": "12px",
                      "accordionHeaderFontWeight": 500,
                      "accordionMinHeight": "65px",
                      "accordionPadding": "16px 24px",
                      "accordionSubHeaderColor": "#DCDFE6",
                      "accordionSubHeaderFontSize": "10px",
                      "accordionSubHeaderFontWeight": 700,
                      "avatarBackgroundColor": "#363C4B",
                      "avatarBorderRadius": "50%",
                      "avatarColor": "#FFFFFF",
                      "avatarFontSizeExtralarge": "16px",
                      "avatarFontSizeLarge": "12px",
                      "avatarFontSizeMedium": "12px",
                      "avatarFontSizeSmall": "12px",
                      "avatarSizeExtralarge": "64px",
                      "avatarSizeLarge": "40px",
                      "avatarSizeMedium": "32px",
                      "avatarSizeSmall": "24px",
                      "buttonFontSizeLarge": "14px",
                      "buttonFontSizeMedium": "12px",
                      "buttonLinkDisabledColor": "#DCDFE6",
                      "buttonLinkFontSizeLarge": "14px",
                      "buttonLinkFontSizeMedium": "14px",
                      "buttonLinkFontSizeSmall": "12px",
                      "buttonLinkHoverBackgroundColor": "#EFF2F7",
                      "buttonLinkPaddingLarge": "6px",
                      "buttonLinkPaddingMedium": "5px",
                      "buttonLinkPaddingSmall": "3px 4px",
                      "buttonLinkPrimaryColor": "#1778FB",
                      "buttonLinkSecondaryColor": "#747D93",
                      "buttonMinWidthLarge": "140px",
                      "buttonMinWidthMedium": "120px",
                      "buttonPaddingLarge": "19px 32px",
                      "buttonPaddingMedium": "11px 32px",
                      "buttonPrimaryBackgroundColor": "#1778FB",
                      "buttonPrimaryBorderRadius": "4px",
                      "buttonPrimaryColor": "#FFFFFF",
                      "buttonPrimaryDisabledBackgroundColor": "#DCDFE6",
                      "buttonPrimaryHoverBackgroundColor": "#48AAF1",
                      "buttonPrimaryHoverColor": "#FFFFFF",
                      "buttonSecondaryBackgroundColor": "#FFFFFF",
                      "buttonSecondaryBorderColor": "#DCDFE6",
                      "buttonSecondaryBorderRadius": "4px",
                      "buttonSecondaryColor": "#212632",
                      "buttonSecondaryDisabledBackgroundColor": "#FFFFFF",
                      "buttonSecondaryDisabledBorderColor": "#EFF2F7",
                      "buttonSecondaryDisabledColor": "#DCDFE6",
                      "buttonSecondaryHoverBackgroundColor": "#DCDFE6",
                      "buttonSecondaryHoverBorderColor": "#DCDFE6",
                      "buttonSecondaryHoverColor": "#212632",
                      "carouselButtonBackground": "rgba(255, 255, 255, .6)",
                      "carouselButtonHoverBackground": "rgba(255, 255, 255, .8)",
                      "carouselButtonSize": "32px",
                      "carouselButtonTransition": "all 120ms ease-in-out",
                      "carouselSlideTransition": "all 120ms ease-in-out",
                      "checkboxBackground": "#FFFFFF",
                      "checkboxBackgroundChecked": "#1778FB",
                      "checkboxBackgroundDisabled": "#DCDFE6",
                      "checkboxBorderColor": "#DCDFE6",
                      "checkboxBorderRadius": "2px",
                      "checkboxBorderWidth": "2px",
                      "checkboxIconColor": "#FFFFFF",
                      "checkboxLabelColor": "#212632",
                      "checkboxLabelDisabled": "#DCDFE6",
                      "checkboxLabelFontSize": "14px",
                      "checkboxLabelMargin": "16px",
                      "checkboxSizeMedium": "24px",
                      "checkboxSizeSmall": "16px",
                      "drawerBackgroundColor": "#FFFFFF",
                      "drawerBorder": "1px solid #EFF2F7",
                      "drawerCloseButtonBackground": "#FFFFFF",
                      "drawerCloseButtonBorder": "1px solid #DCDFE6",
                      "drawerCloseButtonBorderRadius": "4px",
                      "drawerCloseButtonPadding": "6px",
                      "drawerHeaderBorder": "1px solid #EFF2F7",
                      "drawerHeaderColor": "#363C4B",
                      "drawerHeaderMinHeight": "56px",
                      "drawerHeaderPadding": "12px 24px",
                      "drawerMaxWidth": "320px",
                      "dropdownBackground": "#FFFFFF",
                      "dropdownBorderColor": "#EFF2F7",
                      "dropdownBorderRadius": "4px",
                      "dropdownBoxShadow": "0px 16px 32px rgba(54, 60, 75, 0.1)",
                      "dropdownPadding": "8px",
                      "formGroupMarginBottom": "16px",
                      "iconPrimaryColor": "#1778FB",
                      "iconSecondaryColor": "#747D93",
                      "iconSizeLarge": "32px",
                      "iconSizeMedium": "24px",
                      "iconSizeSmall": "16px",
                      "inputFieldBackgroundColor": "#FFFFFF",
                      "inputFieldBorderColor": "#DCDFE6",
                      "inputFieldBorderRadius": "4px",
                      "inputFieldDisabledBackgroundColor": "#FAFBFC",
                      "inputFieldDisabledBorderColor": "#DCDFE6",
                      "inputFieldDisabledColor": "#DCDFE6",
                      "inputFieldDisabledLabelColor": "#DCDFE6",
                      "inputFieldErrorBackgroundColor": "#FAEDEC",
                      "inputFieldErrorBorderColor": "#CD4C41",
                      "inputFieldErrorHelpColor": "#CD4C41",
                      "inputFieldErrorPlaceholderColor": "#CD4C41",
                      "inputFieldFocusBackgroundColor": "#EFF7FB",
                      "inputFieldFocusBorderColor": "#48AAF1",
                      "inputFieldFocusLabelColor": "#48AAF1",
                      "inputFieldFontSize": "14px",
                      "inputFieldHelpColor": "#212632",
                      "inputFieldHelpFontSize": "12px",
                      "inputFieldLabelColor": "#363C4B",
                      "inputFieldLabelFontSize": "12px",
                      "inputFieldLineHeight": "48px",
                      "inputFieldPlaceholderColor": "#DCDFE6",
                      "inputFieldTextIndent": "24px",
                      "listBackgroundColor": "#FFFFFF",
                      "listItemBackgroundColorActiveHover": "#EFF7FB",
                      "listItemBackgroundColorDefaultHover": "#EFF2F7",
                      "listItemBackgroundColorDisabled": "#FAFBFC",
                      "listItemBackgroundColorFocused": "#1778FB",
                      "listItemBackgroundColorHoverDisabled": "#FAFBFC",
                      "listItemBorderRadius": "2px",
                      "listItemColorActive": "#1778FB",
                      "listItemColorActiveHover": "#EFF7FB",
                      "listItemColorDefault": "#212632",
                      "listItemColorDefaultHover": "#EFF2F7",
                      "listItemColorDisabled": "#B6BBC6",
                      "listItemColorFocused": "#FFFFFF",
                      "listItemFontSize": "12px",
                      "listItemFontSizeLarge": "14px",
                      "listItemFontSizeMedium": "12px",
                      "listItemFontWeight": 400,
                      "listItemFontWeightFocused": 500,
                      "listItemMargin": "0 0 4px",
                      "listItemPaddingLarge": "8px 16px",
                      "listItemPaddingMedium": "3px 16px",
                      "listItemSeparatorColor": "#EFF2F7",
                      "listNavItemBackgroundColorDisabled": "#FFFFFF",
                      "listNavItemColorActive": "#1778FB",
                      "listNavItemColorDefault": "#747D93",
                      "listNavItemColorDisabled": "#DCDFE6",
                      "listNavItemColorHover": "#747D93",
                      "listNavItemFontSize": "14px",
                      "listNavItemFontWeight": 500,
                      "listPadding": "8px",
                      "loaderSizeLarge": "64px",
                      "loaderSizeMedium": "48px",
                      "loaderSizeSmall": "32px",
                      "navigationBackgroundColor": "white",
                      "navigationBorder": "1px solid #EFF2F7",
                      "navigationContentMargin": "0 24px 0 0",
                      "navigationHeaderPadding": "0 17px",
                      "navigationLinkFontSize": "12px",
                      "navigationLinkMargin": "0 24px 0 0",
                      "navigationMaxHeight": "73px",
                      "navigationMenuBackgroundColor": "#EFF2F7",
                      "navigationMenuHoverBackgroundColor": "#DCDFE6",
                      "navigationMenuOpenBackgroundColor": "#EFF7FB",
                      "navigationMinHeight": "40px",
                      "notificationBorderRadius": "8px",
                      "notificationCloseButtonColor": "#212632",
                      "notificationErrorBackgroundColor": "#FAEDEC",
                      "notificationErrorBorderColor": "#CD4C41",
                      "notificationErrorColor": "#CD4C41",
                      "notificationNormalBackgroundColor": "#EFF7FB",
                      "notificationNormalBorderColor": "#023E8A",
                      "notificationNormalColor": "#212632",
                      "notificationPadding": "16px",
                      "notificationSuccessBackgroundColor": "#EEF8F6",
                      "notificationSuccessBorderColor": "#299B9A",
                      "notificationSuccessColor": "#299B9A",
                      "paginationLabelColor": "#212632",
                      "paginationLabelMarginBottom": "16px",
                      "paginationProgressActiveBackgroundColor": "#212632",
                      "paginationProgressBackgroundColor": "#DCDFE6",
                      "paginationProgressMarginBottom": "16px",
                      "sliderHandleColor": "#1778FB",
                      "sliderHandleDisabledColor": "#B6BBC6",
                      "sliderHandleDraggingColor": undefined,
                      "sliderHandleMarginTop": "-6px",
                      "sliderHandleSize": "16px",
                      "sliderRailColor": "#DCDFE6",
                      "sliderRailSize": "2px",
                      "sliderTrackColor": "#1778FB",
                      "tabBadgeBackground": "#EFF2F7",
                      "tabBadgeBackgroundActive": "#1778FB",
                      "tabBadgeBackgroundHover": "#48AAF1",
                      "tabBadgeColor": "#747D93",
                      "tabBadgeColorActive": "#FFFFFF",
                      "tabBadgeColorHover": "#FFFFFF",
                      "tabBadgeFontSize": "12px",
                      "tabBadgeFontWeight": 500,
                      "tabBadgePadding": "2px 8px",
                      "tabBorderColor": "transparent",
                      "tabBorderColorActive": "#1778FB",
                      "tabBorderColorHover": "#48AAF1",
                      "tabColor": "#747D93",
                      "tabColorActive": "#1778FB",
                      "tabColorDisabled": "#DCDFE6",
                      "tabColorHover": "#48AAF1",
                      "tabFontSize": "12px",
                      "tabFontWeight": 500,
                      "tableHighlightedCellBackgroundColor": "#F8F9FA",
                      "tableHighlightedHeaderBackgroundColor": "#E5E8EE",
                      "tabsBackgroundColor": "white",
                      "tabsBorderColor": "#EFF2F7",
                      "textLinkDisabledColor": "#DCDFE6",
                      "textLinkFontSizeLarge": "14px",
                      "textLinkFontSizeMedium": "12px",
                      "textLinkPrimaryColor": "#1778FB",
                      "textLinkPrimaryHoverColor": "#48AAF1",
                      "textLinkSecondaryColor": "#747D93",
                      "textLinkSecondaryHoverColor": "#48AAF1",
                    },
                    "fonts": Array [
                      Object {
                        "name": "Roboto-Regular",
                        "style": "normal",
                        "weight": "normal",
                      },
                      Object {
                        "name": "Roboto Medium",
                        "style": "normal",
                        "weight": 500,
                      },
                      Object {
                        "name": "Roboto Bold",
                        "style": "normal",
                        "weight": 700,
                      },
                    ],
                    "global": Object {
                      "bgColor": "white",
                      "boxShadowM": "box-shadow: 0px 8px 24px rgba(54, 60, 75, 0.05)",
                      "fontColor": "#333",
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontSize": "14px",
                      "fontWeightBold": 700,
                      "fontWeightMedium": 500,
                      "fontWeightRegular": 400,
                      "transitionM": "all 250ms ease-in-out",
                      "transitionS": "all 120ms ease-in-out",
                    },
                    "headings": Array [
                      Object {
                        "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                        "fontWeight": 500,
                        "size": "36px",
                      },
                      Object {
                        "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                        "fontWeight": 500,
                        "size": "32px",
                      },
                      Object {
                        "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                        "fontWeight": 500,
                        "size": "24px",
                      },
                      Object {
                        "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                        "fontWeight": 500,
                        "size": "16px",
                      },
                      Object {
                        "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                        "fontWeight": 500,
                        "size": "12px",
                      },
                    ],
                    "shapes": Object {
                      "borderRadiusFull": "50%",
                      "borderRadiusLarge": "8px",
                      "borderRadiusMedium": "4px",
                      "borderRadiusSmall": "2px",
                      "borderWidthMedium": "2px",
                      "borderWidthSmall": "1px",
                    },
                    "spacings": Object {
                      "large1": "80px",
                      "large2": "96px",
                      "large3": "128px",
                      "large4": "200px",
                      "medium1": "32px",
                      "medium2": "40px",
                      "medium3": "48px",
                      "medium4": "56px",
                      "medium5": "64px",
                      "small1": "4px",
                      "small2": "8px",
                      "small3": "16px",
                      "small4": "24px",
                    },
                    "texts": Object {
                      "p1": Object {
                        "color": "#212632",
                        "fontSize": "14px",
                        "fontWeight": 400,
                        "lineHeight": "1.5",
                      },
                      "p1b": Object {
                        "color": "#212632",
                        "fontSize": "14px",
                        "fontWeight": 500,
                        "lineHeight": "1.5",
                      },
                      "p2": Object {
                        "color": "#212632",
                        "fontSize": "12px",
                        "fontWeight": 400,
                        "lineHeight": "1.5",
                      },
                      "p2b": Object {
                        "color": "#212632",
                        "fontSize": "12px",
                        "fontWeight": 500,
                        "lineHeight": "1.5",
                      },
                      "p3b": Object {
                        "color": "#212632",
                        "fontSize": "10px",
                        "fontWeight": 700,
                        "lineHeight": "1.5",
                      },
                    },
                  }
                }
                viewBox="0 0 32 32"
              >
                <path
                  clipRule="evenodd"
                  d="M8 9.6a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm0 6.216a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm1.6 4.617a1.6 1.6 0 100 3.2 1.6 1.6 0 000-3.2zM14.4 9.6a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm0 6.216a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm1.6 4.617a1.6 1.6 0 100 3.2 1.6 1.6 0 000-3.2zM20.8 9.6a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm0 6.216a1.6 1.6 0 113.2 0 1.6 1.6 0 01-3.2 0zm1.6 4.617a1.6 1.6 0 100 3.2 1.6 1.6 0 000-3.2z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="NavigationBar__NavigationLeftHeader-sc-8hnjeq-3 eeOMAI"
      >
        <svg
          fill="none"
          sticked={false}
          style={
            Object {
              "width": "100px",
            }
          }
          viewBox="0 0 99 25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 15L16.9998 5v20L0 15z"
            fill="#1778FB"
          />
          <path
            d="M0 4.98927L8.34259 0 17 5 0 15V4.98927z"
            fill="#48AAF1"
          />
          <path
            d="M33.6885 8.73502c.8565 0 1.624.19067 2.3026.57202.6785.38136 1.2068.91416 1.585 1.59836.3894.6842.584 1.4749.584 2.3722 0 .8973-.1946 1.6937-.584 2.3891-.3782.6842-.9065 1.2169-1.585 1.5983-.6786.3813-1.4461.572-2.3026.572-.634 0-1.218-.1234-1.7519-.3701-.5228-.2468-.9678-.6057-1.3348-1.0768V21H29V8.81914h1.535v1.41326c.356-.49353.8065-.86367 1.3515-1.11042.5451-.25798 1.1457-.38696 1.802-.38696zm-.1335 7.68878c.5673 0 1.0734-.129 1.5184-.387.456-.2692.812-.6393 1.0678-1.1104.267-.4823.4005-1.0319.4005-1.6488s-.1335-1.1609-.4005-1.632c-.2558-.4823-.6118-.8524-1.0678-1.1104-.445-.2579-.9511-.3869-1.5184-.3869-.5561 0-1.0623.1346-1.5183.4038-.4449.2579-.8009.6225-1.0679 1.0935-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.2559.4711.6118.8412 1.0679 1.1104.456.258.9622.387 1.5183.387zM44.1608 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4004.6842.6007 1.4637.6007 2.3386s-.2003 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8009.6281-1.0678 1.1104-.2559.4711-.3838 1.0151-.3838 1.632s.1279 1.1665.3838 1.6488c.2669.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM52.4994 10.3165c.2781-.51594.6897-.90851 1.2347-1.1777.545-.26919 1.2069-.40378 1.9855-.40378v1.56468c-.089-.0112-.2113-.0168-.367-.0168-.8677 0-1.5518.2635-2.0523.7907-.4894.516-.7342 1.2562-.7342 2.2208v4.4417h-1.6017V8.81914h1.535v1.49736zM63.0244 17.2145c-.2336.2019-.5228.3589-.8676.4711-.3448.1009-.7008.1514-1.0678.1514-.8899 0-1.5796-.2411-2.069-.7234-.4894-.4823-.7341-1.1721-.7341-2.0694v-4.8959h-1.5017V8.81914h1.5017V6.86751h1.6017v1.95163h2.5362v1.32916h-2.5362v4.8286c0 .4823.1168.8524.3504 1.1104.2447.258.5896.3869 1.0345.3869.4894 0 .9066-.1402 1.2514-.4206l.5005 1.1609zM68.1979 6.48055c-.9566 0-1.435.52155-1.435 1.56466v.77393h2.5696v1.32916h-2.5362v7.5878h-1.6018v-7.5878h-1.5016V8.81914h1.5016v-.79075c0-.88608.2559-1.5871.7676-2.10305.5116-.51595 1.2291-.77392 2.1523-.77392.356 0 .6897.04486 1.0011.13459.3115.08973.5785.21872.8009.38697l-.4838 1.22818c-.3671-.28041-.7787-.42061-1.2347-.42061zM74.5003 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8008.6281-1.0678 1.1104-.2558.4711-.3838 1.0151-.3838 1.632s.128 1.1665.3838 1.6488c.267.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM81.3039 5.25237h1.6018V17.7361h-1.6018V5.25237zM85.964 8.81914h1.6017v8.91696H85.964V8.81914zm.8009-1.71609c-.3115 0-.5729-.10095-.7842-.30284-.2003-.20189-.3004-.44865-.3004-.74027 0-.29163.1001-.53838.3004-.74028C86.192 5.10655 86.4534 5 86.7649 5c.3114 0 .5673.10095.7675.30284.2113.19068.317.43182.317.72345 0 .30284-.1057.56081-.317.77392-.2002.20189-.4561.30284-.7675.30284zM94.4116 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3893-.6954-.584-1.4805-.584-2.3554s.1947-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7008.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9343 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.535.3869c-.445.258-.8009.6281-1.0679 1.1104-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.267.4711.6229.8412 1.0679 1.1104.456.258.9677.387 1.535.387z"
            fill="#363C4B"
          />
        </svg>
      </div>
    </div>
    <div
      className="NavigationBar__NavigationRight-sc-8hnjeq-2 hIUtBj"
    >
      <div
        className="NavigationBar__NavigationContent-sc-8hnjeq-5 dxIQpV"
      >
        <ul
          className="NavigationBar__NavigationLink-sc-8hnjeq-6 gzESXy"
        >
          <li
            className="NavigationBar__NavigationLinkItem-sc-8hnjeq-7 dQOBuh"
          >
            <a
              className="active"
              href="https://pulse.urbandataanalytics.com/"
              sticked={false}
            >
              Normal Link
            </a>
          </li>
          <li
            className="NavigationBar__NavigationLinkItem-sc-8hnjeq-7 dQOBuh"
          >
            <a
              href="https://pulse.urbandataanalytics.com/"
              sticked={false}
            >
              Active Link
            </a>
          </li>
          <li
            className="NavigationBar__NavigationLinkItem-sc-8hnjeq-7 dQOBuh"
          >
            <a
              className="TextLink__StyledTextLink-qefl1h-0 jwKAjC"
              disabled={false}
              href="https://pulse.urbandataanalytics.com/"
              size="large"
            >
              Product 1
            </a>
          </li>
          <li
            className="NavigationBar__NavigationLinkItem-sc-8hnjeq-7 dQOBuh"
          >
            <a
              className="TextLink__StyledTextLink-qefl1h-0 hpGuqi"
              disabled={false}
              href="https://pulse.urbandataanalytics.com/"
              size="large"
            >
              Product 2
            </a>
          </li>
          <li
            className="NavigationBar__NavigationLinkItem-sc-8hnjeq-7 dQOBuh"
          >
            <svg
              className="Icon__StyledIcon-xqsk8h-0 kEczNP"
              data-name="IconSettings"
              preserveAspectRatio="xMidYMid meet"
              size="medium"
              sticked={false}
              theme={
                Object {
                  "animations": Object {
                    "dropDownDisplay": Keyframes {
                      "id": "sc-keyframes-kPjJpX",
                      "inject": [Function],
                      "name": "kPjJpX",
                      "rules": Array [
                        "@-webkit-keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                        "@keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                      ],
                      "toString": [Function],
                    },
                    "loader": Keyframes {
                      "id": "sc-keyframes-ivfYaJ",
                      "inject": [Function],
                      "name": "ivfYaJ",
                      "rules": Array [
                        "@-webkit-keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        "@keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                      ],
                      "toString": [Function],
                    },
                    "loaderInner": Keyframes {
                      "id": "sc-keyframes-dkFWMP",
                      "inject": [Function],
                      "name": "dkFWMP",
                      "rules": Array [
                        "@-webkit-keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                        "@keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                      ],
                      "toString": [Function],
                    },
                    "loading": Keyframes {
                      "id": "sc-keyframes-kvsyCu",
                      "inject": [Function],
                      "name": "kvsyCu",
                      "rules": Array [
                        "@-webkit-keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                        "@keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                      ],
                      "toString": [Function],
                    },
                    "rotate": Keyframes {
                      "id": "sc-keyframes-iVXCSc",
                      "inject": [Function],
                      "name": "iVXCSc",
                      "rules": Array [
                        "@-webkit-keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        "@keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                      ],
                      "toString": [Function],
                    },
                  },
                  "breakpoints": Array [
                    "544px",
                    "768px",
                    "1012px",
                    "1280px",
                  ],
                  "color": Object {
                    "aubergine100": "#F4EFF1",
                    "aubergine200": "#EFDDE3",
                    "aubergine300": "#E4C7D0",
                    "aubergine400": "#C2A4B6",
                    "aubergine500": "#A888A3",
                    "aubergine600": "#775175",
                    "aubergine700": "#512B58",
                    "aubergine800": "#2C003E",
                    "aubergine900": "#1D0A25",
                    "carabinero100": "#F7E2D7",
                    "carabinero200": "#FFD5C8",
                    "carabinero300": "#FDC0AC",
                    "carabinero400": "#EAA798",
                    "carabinero500": "#E1897F",
                    "carabinero600": "#CE7070",
                    "carabinero700": "#B85959",
                    "carabinero800": "#943939",
                    "carabinero900": "#732929",
                    "carrot100": "#FFECDD",
                    "carrot200": "#F2DBC8",
                    "carrot300": "#F9CDAD",
                    "carrot400": "#EDBE96",
                    "carrot500": "#E7AA71",
                    "carrot600": "#D99455",
                    "carrot700": "#CC7D34",
                    "carrot800": "#B56820",
                    "carrot900": "#934B09",
                    "charcoal200": "#FAFBFC",
                    "charcoal300": "#EFF2F7",
                    "charcoal400": "#DCDFE6",
                    "charcoal500": "#B6BBC6",
                    "charcoal600": "#747D93",
                    "charcoal700": "#363C4B",
                    "charcoal800": "#212632",
                    "emerald100": "#EEF8F6",
                    "emerald500": "#55BAA9",
                    "emerald600": "#299B9A",
                    "forest100": "#D7ECEA",
                    "forest200": "#BCDBD9",
                    "forest300": "#9BCFCC",
                    "forest400": "#6BB0AC",
                    "forest500": "#24A49B",
                    "forest600": "#1B817A",
                    "forest700": "#0E504C",
                    "forest800": "#09332C",
                    "forest900": "#021512",
                    "golden100": "#FEF9E7",
                    "golden200": "#FDF0C7",
                    "golden300": "#FAE5A0",
                    "golden400": "#FFDE72",
                    "golden500": "#FAD046",
                    "golden600": "#F2BF12",
                    "golden700": "#DDAF11",
                    "golden800": "#CCA009",
                    "golden900": "#AF8904",
                    "ocean100": "#E4FAFF",
                    "ocean200": "#CAF0F8",
                    "ocean300": "#ADE8F4",
                    "ocean400": "#90D8EF",
                    "ocean500": "#48B5E4",
                    "ocean600": "#008BC7",
                    "ocean700": "#0077B6",
                    "ocean800": "#023E8A",
                    "ocean900": "#03045E",
                    "primary100": "#EFF7FB",
                    "primary300": "#48AAF1",
                    "primary500": "#1778FB",
                    "primary700": "#0C1B7A",
                    "redclay100": "#FAEDEC",
                    "redclay500": "#CD4C41",
                    "redvelvet": "#B2314A;",
                    "sangria500": "#B2314A",
                    "sangria600": "#972139",
                    "white": "#FFFFFF",
                  },
                  "components": Object {
                    "accordionBorder": "1px solid #EFF2F7",
                    "accordionColor": "#747D93",
                    "accordionHeaderFontSize": "12px",
                    "accordionHeaderFontWeight": 500,
                    "accordionMinHeight": "65px",
                    "accordionPadding": "16px 24px",
                    "accordionSubHeaderColor": "#DCDFE6",
                    "accordionSubHeaderFontSize": "10px",
                    "accordionSubHeaderFontWeight": 700,
                    "avatarBackgroundColor": "#363C4B",
                    "avatarBorderRadius": "50%",
                    "avatarColor": "#FFFFFF",
                    "avatarFontSizeExtralarge": "16px",
                    "avatarFontSizeLarge": "12px",
                    "avatarFontSizeMedium": "12px",
                    "avatarFontSizeSmall": "12px",
                    "avatarSizeExtralarge": "64px",
                    "avatarSizeLarge": "40px",
                    "avatarSizeMedium": "32px",
                    "avatarSizeSmall": "24px",
                    "buttonFontSizeLarge": "14px",
                    "buttonFontSizeMedium": "12px",
                    "buttonLinkDisabledColor": "#DCDFE6",
                    "buttonLinkFontSizeLarge": "14px",
                    "buttonLinkFontSizeMedium": "14px",
                    "buttonLinkFontSizeSmall": "12px",
                    "buttonLinkHoverBackgroundColor": "#EFF2F7",
                    "buttonLinkPaddingLarge": "6px",
                    "buttonLinkPaddingMedium": "5px",
                    "buttonLinkPaddingSmall": "3px 4px",
                    "buttonLinkPrimaryColor": "#1778FB",
                    "buttonLinkSecondaryColor": "#747D93",
                    "buttonMinWidthLarge": "140px",
                    "buttonMinWidthMedium": "120px",
                    "buttonPaddingLarge": "19px 32px",
                    "buttonPaddingMedium": "11px 32px",
                    "buttonPrimaryBackgroundColor": "#1778FB",
                    "buttonPrimaryBorderRadius": "4px",
                    "buttonPrimaryColor": "#FFFFFF",
                    "buttonPrimaryDisabledBackgroundColor": "#DCDFE6",
                    "buttonPrimaryHoverBackgroundColor": "#48AAF1",
                    "buttonPrimaryHoverColor": "#FFFFFF",
                    "buttonSecondaryBackgroundColor": "#FFFFFF",
                    "buttonSecondaryBorderColor": "#DCDFE6",
                    "buttonSecondaryBorderRadius": "4px",
                    "buttonSecondaryColor": "#212632",
                    "buttonSecondaryDisabledBackgroundColor": "#FFFFFF",
                    "buttonSecondaryDisabledBorderColor": "#EFF2F7",
                    "buttonSecondaryDisabledColor": "#DCDFE6",
                    "buttonSecondaryHoverBackgroundColor": "#DCDFE6",
                    "buttonSecondaryHoverBorderColor": "#DCDFE6",
                    "buttonSecondaryHoverColor": "#212632",
                    "carouselButtonBackground": "rgba(255, 255, 255, .6)",
                    "carouselButtonHoverBackground": "rgba(255, 255, 255, .8)",
                    "carouselButtonSize": "32px",
                    "carouselButtonTransition": "all 120ms ease-in-out",
                    "carouselSlideTransition": "all 120ms ease-in-out",
                    "checkboxBackground": "#FFFFFF",
                    "checkboxBackgroundChecked": "#1778FB",
                    "checkboxBackgroundDisabled": "#DCDFE6",
                    "checkboxBorderColor": "#DCDFE6",
                    "checkboxBorderRadius": "2px",
                    "checkboxBorderWidth": "2px",
                    "checkboxIconColor": "#FFFFFF",
                    "checkboxLabelColor": "#212632",
                    "checkboxLabelDisabled": "#DCDFE6",
                    "checkboxLabelFontSize": "14px",
                    "checkboxLabelMargin": "16px",
                    "checkboxSizeMedium": "24px",
                    "checkboxSizeSmall": "16px",
                    "drawerBackgroundColor": "#FFFFFF",
                    "drawerBorder": "1px solid #EFF2F7",
                    "drawerCloseButtonBackground": "#FFFFFF",
                    "drawerCloseButtonBorder": "1px solid #DCDFE6",
                    "drawerCloseButtonBorderRadius": "4px",
                    "drawerCloseButtonPadding": "6px",
                    "drawerHeaderBorder": "1px solid #EFF2F7",
                    "drawerHeaderColor": "#363C4B",
                    "drawerHeaderMinHeight": "56px",
                    "drawerHeaderPadding": "12px 24px",
                    "drawerMaxWidth": "320px",
                    "dropdownBackground": "#FFFFFF",
                    "dropdownBorderColor": "#EFF2F7",
                    "dropdownBorderRadius": "4px",
                    "dropdownBoxShadow": "0px 16px 32px rgba(54, 60, 75, 0.1)",
                    "dropdownPadding": "8px",
                    "formGroupMarginBottom": "16px",
                    "iconPrimaryColor": "#1778FB",
                    "iconSecondaryColor": "#747D93",
                    "iconSizeLarge": "32px",
                    "iconSizeMedium": "24px",
                    "iconSizeSmall": "16px",
                    "inputFieldBackgroundColor": "#FFFFFF",
                    "inputFieldBorderColor": "#DCDFE6",
                    "inputFieldBorderRadius": "4px",
                    "inputFieldDisabledBackgroundColor": "#FAFBFC",
                    "inputFieldDisabledBorderColor": "#DCDFE6",
                    "inputFieldDisabledColor": "#DCDFE6",
                    "inputFieldDisabledLabelColor": "#DCDFE6",
                    "inputFieldErrorBackgroundColor": "#FAEDEC",
                    "inputFieldErrorBorderColor": "#CD4C41",
                    "inputFieldErrorHelpColor": "#CD4C41",
                    "inputFieldErrorPlaceholderColor": "#CD4C41",
                    "inputFieldFocusBackgroundColor": "#EFF7FB",
                    "inputFieldFocusBorderColor": "#48AAF1",
                    "inputFieldFocusLabelColor": "#48AAF1",
                    "inputFieldFontSize": "14px",
                    "inputFieldHelpColor": "#212632",
                    "inputFieldHelpFontSize": "12px",
                    "inputFieldLabelColor": "#363C4B",
                    "inputFieldLabelFontSize": "12px",
                    "inputFieldLineHeight": "48px",
                    "inputFieldPlaceholderColor": "#DCDFE6",
                    "inputFieldTextIndent": "24px",
                    "listBackgroundColor": "#FFFFFF",
                    "listItemBackgroundColorActiveHover": "#EFF7FB",
                    "listItemBackgroundColorDefaultHover": "#EFF2F7",
                    "listItemBackgroundColorDisabled": "#FAFBFC",
                    "listItemBackgroundColorFocused": "#1778FB",
                    "listItemBackgroundColorHoverDisabled": "#FAFBFC",
                    "listItemBorderRadius": "2px",
                    "listItemColorActive": "#1778FB",
                    "listItemColorActiveHover": "#EFF7FB",
                    "listItemColorDefault": "#212632",
                    "listItemColorDefaultHover": "#EFF2F7",
                    "listItemColorDisabled": "#B6BBC6",
                    "listItemColorFocused": "#FFFFFF",
                    "listItemFontSize": "12px",
                    "listItemFontSizeLarge": "14px",
                    "listItemFontSizeMedium": "12px",
                    "listItemFontWeight": 400,
                    "listItemFontWeightFocused": 500,
                    "listItemMargin": "0 0 4px",
                    "listItemPaddingLarge": "8px 16px",
                    "listItemPaddingMedium": "3px 16px",
                    "listItemSeparatorColor": "#EFF2F7",
                    "listNavItemBackgroundColorDisabled": "#FFFFFF",
                    "listNavItemColorActive": "#1778FB",
                    "listNavItemColorDefault": "#747D93",
                    "listNavItemColorDisabled": "#DCDFE6",
                    "listNavItemColorHover": "#747D93",
                    "listNavItemFontSize": "14px",
                    "listNavItemFontWeight": 500,
                    "listPadding": "8px",
                    "loaderSizeLarge": "64px",
                    "loaderSizeMedium": "48px",
                    "loaderSizeSmall": "32px",
                    "navigationBackgroundColor": "white",
                    "navigationBorder": "1px solid #EFF2F7",
                    "navigationContentMargin": "0 24px 0 0",
                    "navigationHeaderPadding": "0 17px",
                    "navigationLinkFontSize": "12px",
                    "navigationLinkMargin": "0 24px 0 0",
                    "navigationMaxHeight": "73px",
                    "navigationMenuBackgroundColor": "#EFF2F7",
                    "navigationMenuHoverBackgroundColor": "#DCDFE6",
                    "navigationMenuOpenBackgroundColor": "#EFF7FB",
                    "navigationMinHeight": "40px",
                    "notificationBorderRadius": "8px",
                    "notificationCloseButtonColor": "#212632",
                    "notificationErrorBackgroundColor": "#FAEDEC",
                    "notificationErrorBorderColor": "#CD4C41",
                    "notificationErrorColor": "#CD4C41",
                    "notificationNormalBackgroundColor": "#EFF7FB",
                    "notificationNormalBorderColor": "#023E8A",
                    "notificationNormalColor": "#212632",
                    "notificationPadding": "16px",
                    "notificationSuccessBackgroundColor": "#EEF8F6",
                    "notificationSuccessBorderColor": "#299B9A",
                    "notificationSuccessColor": "#299B9A",
                    "paginationLabelColor": "#212632",
                    "paginationLabelMarginBottom": "16px",
                    "paginationProgressActiveBackgroundColor": "#212632",
                    "paginationProgressBackgroundColor": "#DCDFE6",
                    "paginationProgressMarginBottom": "16px",
                    "sliderHandleColor": "#1778FB",
                    "sliderHandleDisabledColor": "#B6BBC6",
                    "sliderHandleDraggingColor": undefined,
                    "sliderHandleMarginTop": "-6px",
                    "sliderHandleSize": "16px",
                    "sliderRailColor": "#DCDFE6",
                    "sliderRailSize": "2px",
                    "sliderTrackColor": "#1778FB",
                    "tabBadgeBackground": "#EFF2F7",
                    "tabBadgeBackgroundActive": "#1778FB",
                    "tabBadgeBackgroundHover": "#48AAF1",
                    "tabBadgeColor": "#747D93",
                    "tabBadgeColorActive": "#FFFFFF",
                    "tabBadgeColorHover": "#FFFFFF",
                    "tabBadgeFontSize": "12px",
                    "tabBadgeFontWeight": 500,
                    "tabBadgePadding": "2px 8px",
                    "tabBorderColor": "transparent",
                    "tabBorderColorActive": "#1778FB",
                    "tabBorderColorHover": "#48AAF1",
                    "tabColor": "#747D93",
                    "tabColorActive": "#1778FB",
                    "tabColorDisabled": "#DCDFE6",
                    "tabColorHover": "#48AAF1",
                    "tabFontSize": "12px",
                    "tabFontWeight": 500,
                    "tableHighlightedCellBackgroundColor": "#F8F9FA",
                    "tableHighlightedHeaderBackgroundColor": "#E5E8EE",
                    "tabsBackgroundColor": "white",
                    "tabsBorderColor": "#EFF2F7",
                    "textLinkDisabledColor": "#DCDFE6",
                    "textLinkFontSizeLarge": "14px",
                    "textLinkFontSizeMedium": "12px",
                    "textLinkPrimaryColor": "#1778FB",
                    "textLinkPrimaryHoverColor": "#48AAF1",
                    "textLinkSecondaryColor": "#747D93",
                    "textLinkSecondaryHoverColor": "#48AAF1",
                  },
                  "fonts": Array [
                    Object {
                      "name": "Roboto-Regular",
                      "style": "normal",
                      "weight": "normal",
                    },
                    Object {
                      "name": "Roboto Medium",
                      "style": "normal",
                      "weight": 500,
                    },
                    Object {
                      "name": "Roboto Bold",
                      "style": "normal",
                      "weight": 700,
                    },
                  ],
                  "global": Object {
                    "bgColor": "white",
                    "boxShadowM": "box-shadow: 0px 8px 24px rgba(54, 60, 75, 0.05)",
                    "fontColor": "#333",
                    "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                    "fontSize": "14px",
                    "fontWeightBold": 700,
                    "fontWeightMedium": 500,
                    "fontWeightRegular": 400,
                    "transitionM": "all 250ms ease-in-out",
                    "transitionS": "all 120ms ease-in-out",
                  },
                  "headings": Array [
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "36px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "32px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "24px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "16px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "12px",
                    },
                  ],
                  "shapes": Object {
                    "borderRadiusFull": "50%",
                    "borderRadiusLarge": "8px",
                    "borderRadiusMedium": "4px",
                    "borderRadiusSmall": "2px",
                    "borderWidthMedium": "2px",
                    "borderWidthSmall": "1px",
                  },
                  "spacings": Object {
                    "large1": "80px",
                    "large2": "96px",
                    "large3": "128px",
                    "large4": "200px",
                    "medium1": "32px",
                    "medium2": "40px",
                    "medium3": "48px",
                    "medium4": "56px",
                    "medium5": "64px",
                    "small1": "4px",
                    "small2": "8px",
                    "small3": "16px",
                    "small4": "24px",
                  },
                  "texts": Object {
                    "p1": Object {
                      "color": "#212632",
                      "fontSize": "14px",
                      "fontWeight": 400,
                      "lineHeight": "1.5",
                    },
                    "p1b": Object {
                      "color": "#212632",
                      "fontSize": "14px",
                      "fontWeight": 500,
                      "lineHeight": "1.5",
                    },
                    "p2": Object {
                      "color": "#212632",
                      "fontSize": "12px",
                      "fontWeight": 400,
                      "lineHeight": "1.5",
                    },
                    "p2b": Object {
                      "color": "#212632",
                      "fontSize": "12px",
                      "fontWeight": 500,
                      "lineHeight": "1.5",
                    },
                    "p3b": Object {
                      "color": "#212632",
                      "fontSize": "10px",
                      "fontWeight": 700,
                      "lineHeight": "1.5",
                    },
                  },
                }
              }
              viewBox="0 0 32 32"
            >
              <path
                clipRule="evenodd"
                d="M27.923 17.39a1.467 1.467 0 01-1.45 1.3h-.2a1.613 1.613 0 00-1.07 2.813c.57.526.64 1.402.16 2.01a11.84 11.84 0 01-1.95 1.92 1.471 1.471 0 01-.9.313 1.493 1.493 0 01-1.09-.477 1.72 1.72 0 00-1.25-.521c-.192-.001-.382.035-.56.105a1.634 1.634 0 00-1 1.56 1.476 1.476 0 01-1.31 1.514c-.898.1-1.804.097-2.7-.007a1.463 1.463 0 01-1.29-1.547 1.636 1.636 0 00-.99-1.585 1.5 1.5 0 00-.57-.11 1.726 1.726 0 00-1.25.521 1.48 1.48 0 01-2.02.16 11.856 11.856 0 01-1.89-1.923 1.459 1.459 0 01.16-1.99c.497-.46.66-1.18.41-1.81a1.6 1.6 0 00-1.45-1h-.06a1.572 1.572 0 01-1.57-1.304c-.11-.907-.11-1.823 0-2.73.079-.76.735-1.329 1.5-1.3a1.731 1.731 0 001.63-.985 1.624 1.624 0 00-.41-1.823 1.484 1.484 0 01-.16-2.01 12.027 12.027 0 011.94-1.92c.26-.201.58-.311.91-.313.414.001.809.175 1.09.48.329.335.78.521 1.25.517.19.002.38-.032.56-.1a1.636 1.636 0 001-1.563 1.475 1.475 0 011.31-1.512 12.01 12.01 0 012.7.007c.772.09 1.339.77 1.29 1.546-.039.685.358 1.32.99 1.587.181.072.375.109.57.108a1.73 1.73 0 001.25-.52 1.472 1.472 0 012.01-.161c.705.565 1.342 1.21 1.9 1.92.483.605.413 1.48-.16 2a1.612 1.612 0 001.11 2.808 1.57 1.57 0 011.56 1.3c.104.904.104 1.817 0 2.722zm-1.98-2.323a3.216 3.216 0 01-2.24-5.447c-.39-.48-.826-.92-1.3-1.315-.622.58-1.44.9-2.29.9a3.061 3.061 0 01-1.19-.233 3.227 3.227 0 01-1.97-2.947 10.03 10.03 0 00-1.85 0 3.021 3.021 0 01-2.07 2.7 2.916 2.916 0 01-1.1.417 3.352 3.352 0 01-2.28-.891 9.7 9.7 0 00-1.34 1.317 3.226 3.226 0 01.66 3.484 3.3 3.3 0 01-2.94 1.966 10.727 10.727 0 00-.01 1.88 3.211 3.211 0 012.24 5.449c.395.475.83.915 1.3 1.316a3.387 3.387 0 012.29-.9c.411-.003.82.076 1.2.234a3.22 3.22 0 011.97 2.945 9.942 9.942 0 001.85 0 3.247 3.247 0 011.99-2.893 3.1 3.1 0 011.17-.224 3.36 3.36 0 012.29.892c.485-.398.933-.84 1.34-1.317a3.207 3.207 0 01-.66-3.484 3.254 3.254 0 012.94-1.974c.06-.625.06-1.254 0-1.88v.005zm-9.94 4.923a4.006 4.006 0 113.99-4.006 4 4 0 01-3.99 4.006zm0-5.992a2 2 0 10.02 4.002 2 2 0 00-.02-4.003z"
              />
            </svg>
          </li>
        </ul>
      </div>
      <div
        className="NavigationBar__NavigationRightContent-sc-8hnjeq-8 gxZCJf"
      >
        <div
          className="Dropdown__StyledDropdown-sc-103yhtj-0 cUjIHn"
        >
          <div
            className="Dropdown__StyledLabel-sc-103yhtj-1 gOugPm"
            onClick={[Function]}
          >
            <svg
              className="Icon__StyledIcon-xqsk8h-0 fYJxjg"
              data-name="IconUser"
              preserveAspectRatio="xMidYMid meet"
              size="medium"
              style={
                Object {
                  "marginRight": "30px",
                }
              }
              theme={
                Object {
                  "animations": Object {
                    "dropDownDisplay": Keyframes {
                      "id": "sc-keyframes-kPjJpX",
                      "inject": [Function],
                      "name": "kPjJpX",
                      "rules": Array [
                        "@-webkit-keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                        "@keyframes kPjJpX{0%{opacity:0;-webkit-transform:scale(0.98) translateY(-0.6em);-ms-transform:scale(0.98) translateY(-0.6em);transform:scale(0.98) translateY(-0.6em);}to{opacity:1;-webkit-transform:scale(1) translateY(0);-ms-transform:scale(1) translateY(0);transform:scale(1) translateY(0);}}",
                      ],
                      "toString": [Function],
                    },
                    "loader": Keyframes {
                      "id": "sc-keyframes-ivfYaJ",
                      "inject": [Function],
                      "name": "ivfYaJ",
                      "rules": Array [
                        "@-webkit-keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        "@keyframes ivfYaJ{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}25%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}50%{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);}75%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                      ],
                      "toString": [Function],
                    },
                    "loaderInner": Keyframes {
                      "id": "sc-keyframes-dkFWMP",
                      "inject": [Function],
                      "name": "dkFWMP",
                      "rules": Array [
                        "@-webkit-keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                        "@keyframes dkFWMP{0%{height:0%;}25%{height:0%;}50%{height:100%;}75%{height:100%;}100%{height:0%;}}",
                      ],
                      "toString": [Function],
                    },
                    "loading": Keyframes {
                      "id": "sc-keyframes-kvsyCu",
                      "inject": [Function],
                      "name": "kvsyCu",
                      "rules": Array [
                        "@-webkit-keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                        "@keyframes kvsyCu{0%{background-color:rgba(220,223,230,1);}50%{background-color:rgba(220,223,230,.5);}100%{background-color:rgba(220,223,230,1);}}",
                      ],
                      "toString": [Function],
                    },
                    "rotate": Keyframes {
                      "id": "sc-keyframes-iVXCSc",
                      "inject": [Function],
                      "name": "iVXCSc",
                      "rules": Array [
                        "@-webkit-keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                        "@keyframes iVXCSc{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
                      ],
                      "toString": [Function],
                    },
                  },
                  "breakpoints": Array [
                    "544px",
                    "768px",
                    "1012px",
                    "1280px",
                  ],
                  "color": Object {
                    "aubergine100": "#F4EFF1",
                    "aubergine200": "#EFDDE3",
                    "aubergine300": "#E4C7D0",
                    "aubergine400": "#C2A4B6",
                    "aubergine500": "#A888A3",
                    "aubergine600": "#775175",
                    "aubergine700": "#512B58",
                    "aubergine800": "#2C003E",
                    "aubergine900": "#1D0A25",
                    "carabinero100": "#F7E2D7",
                    "carabinero200": "#FFD5C8",
                    "carabinero300": "#FDC0AC",
                    "carabinero400": "#EAA798",
                    "carabinero500": "#E1897F",
                    "carabinero600": "#CE7070",
                    "carabinero700": "#B85959",
                    "carabinero800": "#943939",
                    "carabinero900": "#732929",
                    "carrot100": "#FFECDD",
                    "carrot200": "#F2DBC8",
                    "carrot300": "#F9CDAD",
                    "carrot400": "#EDBE96",
                    "carrot500": "#E7AA71",
                    "carrot600": "#D99455",
                    "carrot700": "#CC7D34",
                    "carrot800": "#B56820",
                    "carrot900": "#934B09",
                    "charcoal200": "#FAFBFC",
                    "charcoal300": "#EFF2F7",
                    "charcoal400": "#DCDFE6",
                    "charcoal500": "#B6BBC6",
                    "charcoal600": "#747D93",
                    "charcoal700": "#363C4B",
                    "charcoal800": "#212632",
                    "emerald100": "#EEF8F6",
                    "emerald500": "#55BAA9",
                    "emerald600": "#299B9A",
                    "forest100": "#D7ECEA",
                    "forest200": "#BCDBD9",
                    "forest300": "#9BCFCC",
                    "forest400": "#6BB0AC",
                    "forest500": "#24A49B",
                    "forest600": "#1B817A",
                    "forest700": "#0E504C",
                    "forest800": "#09332C",
                    "forest900": "#021512",
                    "golden100": "#FEF9E7",
                    "golden200": "#FDF0C7",
                    "golden300": "#FAE5A0",
                    "golden400": "#FFDE72",
                    "golden500": "#FAD046",
                    "golden600": "#F2BF12",
                    "golden700": "#DDAF11",
                    "golden800": "#CCA009",
                    "golden900": "#AF8904",
                    "ocean100": "#E4FAFF",
                    "ocean200": "#CAF0F8",
                    "ocean300": "#ADE8F4",
                    "ocean400": "#90D8EF",
                    "ocean500": "#48B5E4",
                    "ocean600": "#008BC7",
                    "ocean700": "#0077B6",
                    "ocean800": "#023E8A",
                    "ocean900": "#03045E",
                    "primary100": "#EFF7FB",
                    "primary300": "#48AAF1",
                    "primary500": "#1778FB",
                    "primary700": "#0C1B7A",
                    "redclay100": "#FAEDEC",
                    "redclay500": "#CD4C41",
                    "redvelvet": "#B2314A;",
                    "sangria500": "#B2314A",
                    "sangria600": "#972139",
                    "white": "#FFFFFF",
                  },
                  "components": Object {
                    "accordionBorder": "1px solid #EFF2F7",
                    "accordionColor": "#747D93",
                    "accordionHeaderFontSize": "12px",
                    "accordionHeaderFontWeight": 500,
                    "accordionMinHeight": "65px",
                    "accordionPadding": "16px 24px",
                    "accordionSubHeaderColor": "#DCDFE6",
                    "accordionSubHeaderFontSize": "10px",
                    "accordionSubHeaderFontWeight": 700,
                    "avatarBackgroundColor": "#363C4B",
                    "avatarBorderRadius": "50%",
                    "avatarColor": "#FFFFFF",
                    "avatarFontSizeExtralarge": "16px",
                    "avatarFontSizeLarge": "12px",
                    "avatarFontSizeMedium": "12px",
                    "avatarFontSizeSmall": "12px",
                    "avatarSizeExtralarge": "64px",
                    "avatarSizeLarge": "40px",
                    "avatarSizeMedium": "32px",
                    "avatarSizeSmall": "24px",
                    "buttonFontSizeLarge": "14px",
                    "buttonFontSizeMedium": "12px",
                    "buttonLinkDisabledColor": "#DCDFE6",
                    "buttonLinkFontSizeLarge": "14px",
                    "buttonLinkFontSizeMedium": "14px",
                    "buttonLinkFontSizeSmall": "12px",
                    "buttonLinkHoverBackgroundColor": "#EFF2F7",
                    "buttonLinkPaddingLarge": "6px",
                    "buttonLinkPaddingMedium": "5px",
                    "buttonLinkPaddingSmall": "3px 4px",
                    "buttonLinkPrimaryColor": "#1778FB",
                    "buttonLinkSecondaryColor": "#747D93",
                    "buttonMinWidthLarge": "140px",
                    "buttonMinWidthMedium": "120px",
                    "buttonPaddingLarge": "19px 32px",
                    "buttonPaddingMedium": "11px 32px",
                    "buttonPrimaryBackgroundColor": "#1778FB",
                    "buttonPrimaryBorderRadius": "4px",
                    "buttonPrimaryColor": "#FFFFFF",
                    "buttonPrimaryDisabledBackgroundColor": "#DCDFE6",
                    "buttonPrimaryHoverBackgroundColor": "#48AAF1",
                    "buttonPrimaryHoverColor": "#FFFFFF",
                    "buttonSecondaryBackgroundColor": "#FFFFFF",
                    "buttonSecondaryBorderColor": "#DCDFE6",
                    "buttonSecondaryBorderRadius": "4px",
                    "buttonSecondaryColor": "#212632",
                    "buttonSecondaryDisabledBackgroundColor": "#FFFFFF",
                    "buttonSecondaryDisabledBorderColor": "#EFF2F7",
                    "buttonSecondaryDisabledColor": "#DCDFE6",
                    "buttonSecondaryHoverBackgroundColor": "#DCDFE6",
                    "buttonSecondaryHoverBorderColor": "#DCDFE6",
                    "buttonSecondaryHoverColor": "#212632",
                    "carouselButtonBackground": "rgba(255, 255, 255, .6)",
                    "carouselButtonHoverBackground": "rgba(255, 255, 255, .8)",
                    "carouselButtonSize": "32px",
                    "carouselButtonTransition": "all 120ms ease-in-out",
                    "carouselSlideTransition": "all 120ms ease-in-out",
                    "checkboxBackground": "#FFFFFF",
                    "checkboxBackgroundChecked": "#1778FB",
                    "checkboxBackgroundDisabled": "#DCDFE6",
                    "checkboxBorderColor": "#DCDFE6",
                    "checkboxBorderRadius": "2px",
                    "checkboxBorderWidth": "2px",
                    "checkboxIconColor": "#FFFFFF",
                    "checkboxLabelColor": "#212632",
                    "checkboxLabelDisabled": "#DCDFE6",
                    "checkboxLabelFontSize": "14px",
                    "checkboxLabelMargin": "16px",
                    "checkboxSizeMedium": "24px",
                    "checkboxSizeSmall": "16px",
                    "drawerBackgroundColor": "#FFFFFF",
                    "drawerBorder": "1px solid #EFF2F7",
                    "drawerCloseButtonBackground": "#FFFFFF",
                    "drawerCloseButtonBorder": "1px solid #DCDFE6",
                    "drawerCloseButtonBorderRadius": "4px",
                    "drawerCloseButtonPadding": "6px",
                    "drawerHeaderBorder": "1px solid #EFF2F7",
                    "drawerHeaderColor": "#363C4B",
                    "drawerHeaderMinHeight": "56px",
                    "drawerHeaderPadding": "12px 24px",
                    "drawerMaxWidth": "320px",
                    "dropdownBackground": "#FFFFFF",
                    "dropdownBorderColor": "#EFF2F7",
                    "dropdownBorderRadius": "4px",
                    "dropdownBoxShadow": "0px 16px 32px rgba(54, 60, 75, 0.1)",
                    "dropdownPadding": "8px",
                    "formGroupMarginBottom": "16px",
                    "iconPrimaryColor": "#1778FB",
                    "iconSecondaryColor": "#747D93",
                    "iconSizeLarge": "32px",
                    "iconSizeMedium": "24px",
                    "iconSizeSmall": "16px",
                    "inputFieldBackgroundColor": "#FFFFFF",
                    "inputFieldBorderColor": "#DCDFE6",
                    "inputFieldBorderRadius": "4px",
                    "inputFieldDisabledBackgroundColor": "#FAFBFC",
                    "inputFieldDisabledBorderColor": "#DCDFE6",
                    "inputFieldDisabledColor": "#DCDFE6",
                    "inputFieldDisabledLabelColor": "#DCDFE6",
                    "inputFieldErrorBackgroundColor": "#FAEDEC",
                    "inputFieldErrorBorderColor": "#CD4C41",
                    "inputFieldErrorHelpColor": "#CD4C41",
                    "inputFieldErrorPlaceholderColor": "#CD4C41",
                    "inputFieldFocusBackgroundColor": "#EFF7FB",
                    "inputFieldFocusBorderColor": "#48AAF1",
                    "inputFieldFocusLabelColor": "#48AAF1",
                    "inputFieldFontSize": "14px",
                    "inputFieldHelpColor": "#212632",
                    "inputFieldHelpFontSize": "12px",
                    "inputFieldLabelColor": "#363C4B",
                    "inputFieldLabelFontSize": "12px",
                    "inputFieldLineHeight": "48px",
                    "inputFieldPlaceholderColor": "#DCDFE6",
                    "inputFieldTextIndent": "24px",
                    "listBackgroundColor": "#FFFFFF",
                    "listItemBackgroundColorActiveHover": "#EFF7FB",
                    "listItemBackgroundColorDefaultHover": "#EFF2F7",
                    "listItemBackgroundColorDisabled": "#FAFBFC",
                    "listItemBackgroundColorFocused": "#1778FB",
                    "listItemBackgroundColorHoverDisabled": "#FAFBFC",
                    "listItemBorderRadius": "2px",
                    "listItemColorActive": "#1778FB",
                    "listItemColorActiveHover": "#EFF7FB",
                    "listItemColorDefault": "#212632",
                    "listItemColorDefaultHover": "#EFF2F7",
                    "listItemColorDisabled": "#B6BBC6",
                    "listItemColorFocused": "#FFFFFF",
                    "listItemFontSize": "12px",
                    "listItemFontSizeLarge": "14px",
                    "listItemFontSizeMedium": "12px",
                    "listItemFontWeight": 400,
                    "listItemFontWeightFocused": 500,
                    "listItemMargin": "0 0 4px",
                    "listItemPaddingLarge": "8px 16px",
                    "listItemPaddingMedium": "3px 16px",
                    "listItemSeparatorColor": "#EFF2F7",
                    "listNavItemBackgroundColorDisabled": "#FFFFFF",
                    "listNavItemColorActive": "#1778FB",
                    "listNavItemColorDefault": "#747D93",
                    "listNavItemColorDisabled": "#DCDFE6",
                    "listNavItemColorHover": "#747D93",
                    "listNavItemFontSize": "14px",
                    "listNavItemFontWeight": 500,
                    "listPadding": "8px",
                    "loaderSizeLarge": "64px",
                    "loaderSizeMedium": "48px",
                    "loaderSizeSmall": "32px",
                    "navigationBackgroundColor": "white",
                    "navigationBorder": "1px solid #EFF2F7",
                    "navigationContentMargin": "0 24px 0 0",
                    "navigationHeaderPadding": "0 17px",
                    "navigationLinkFontSize": "12px",
                    "navigationLinkMargin": "0 24px 0 0",
                    "navigationMaxHeight": "73px",
                    "navigationMenuBackgroundColor": "#EFF2F7",
                    "navigationMenuHoverBackgroundColor": "#DCDFE6",
                    "navigationMenuOpenBackgroundColor": "#EFF7FB",
                    "navigationMinHeight": "40px",
                    "notificationBorderRadius": "8px",
                    "notificationCloseButtonColor": "#212632",
                    "notificationErrorBackgroundColor": "#FAEDEC",
                    "notificationErrorBorderColor": "#CD4C41",
                    "notificationErrorColor": "#CD4C41",
                    "notificationNormalBackgroundColor": "#EFF7FB",
                    "notificationNormalBorderColor": "#023E8A",
                    "notificationNormalColor": "#212632",
                    "notificationPadding": "16px",
                    "notificationSuccessBackgroundColor": "#EEF8F6",
                    "notificationSuccessBorderColor": "#299B9A",
                    "notificationSuccessColor": "#299B9A",
                    "paginationLabelColor": "#212632",
                    "paginationLabelMarginBottom": "16px",
                    "paginationProgressActiveBackgroundColor": "#212632",
                    "paginationProgressBackgroundColor": "#DCDFE6",
                    "paginationProgressMarginBottom": "16px",
                    "sliderHandleColor": "#1778FB",
                    "sliderHandleDisabledColor": "#B6BBC6",
                    "sliderHandleDraggingColor": undefined,
                    "sliderHandleMarginTop": "-6px",
                    "sliderHandleSize": "16px",
                    "sliderRailColor": "#DCDFE6",
                    "sliderRailSize": "2px",
                    "sliderTrackColor": "#1778FB",
                    "tabBadgeBackground": "#EFF2F7",
                    "tabBadgeBackgroundActive": "#1778FB",
                    "tabBadgeBackgroundHover": "#48AAF1",
                    "tabBadgeColor": "#747D93",
                    "tabBadgeColorActive": "#FFFFFF",
                    "tabBadgeColorHover": "#FFFFFF",
                    "tabBadgeFontSize": "12px",
                    "tabBadgeFontWeight": 500,
                    "tabBadgePadding": "2px 8px",
                    "tabBorderColor": "transparent",
                    "tabBorderColorActive": "#1778FB",
                    "tabBorderColorHover": "#48AAF1",
                    "tabColor": "#747D93",
                    "tabColorActive": "#1778FB",
                    "tabColorDisabled": "#DCDFE6",
                    "tabColorHover": "#48AAF1",
                    "tabFontSize": "12px",
                    "tabFontWeight": 500,
                    "tableHighlightedCellBackgroundColor": "#F8F9FA",
                    "tableHighlightedHeaderBackgroundColor": "#E5E8EE",
                    "tabsBackgroundColor": "white",
                    "tabsBorderColor": "#EFF2F7",
                    "textLinkDisabledColor": "#DCDFE6",
                    "textLinkFontSizeLarge": "14px",
                    "textLinkFontSizeMedium": "12px",
                    "textLinkPrimaryColor": "#1778FB",
                    "textLinkPrimaryHoverColor": "#48AAF1",
                    "textLinkSecondaryColor": "#747D93",
                    "textLinkSecondaryHoverColor": "#48AAF1",
                  },
                  "fonts": Array [
                    Object {
                      "name": "Roboto-Regular",
                      "style": "normal",
                      "weight": "normal",
                    },
                    Object {
                      "name": "Roboto Medium",
                      "style": "normal",
                      "weight": 500,
                    },
                    Object {
                      "name": "Roboto Bold",
                      "style": "normal",
                      "weight": 700,
                    },
                  ],
                  "global": Object {
                    "bgColor": "white",
                    "boxShadowM": "box-shadow: 0px 8px 24px rgba(54, 60, 75, 0.05)",
                    "fontColor": "#333",
                    "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                    "fontSize": "14px",
                    "fontWeightBold": 700,
                    "fontWeightMedium": 500,
                    "fontWeightRegular": 400,
                    "transitionM": "all 250ms ease-in-out",
                    "transitionS": "all 120ms ease-in-out",
                  },
                  "headings": Array [
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "36px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "32px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "24px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "16px",
                    },
                    Object {
                      "fontFamily": "\\"Roboto\\", Arial, sans-serif",
                      "fontWeight": 500,
                      "size": "12px",
                    },
                  ],
                  "shapes": Object {
                    "borderRadiusFull": "50%",
                    "borderRadiusLarge": "8px",
                    "borderRadiusMedium": "4px",
                    "borderRadiusSmall": "2px",
                    "borderWidthMedium": "2px",
                    "borderWidthSmall": "1px",
                  },
                  "spacings": Object {
                    "large1": "80px",
                    "large2": "96px",
                    "large3": "128px",
                    "large4": "200px",
                    "medium1": "32px",
                    "medium2": "40px",
                    "medium3": "48px",
                    "medium4": "56px",
                    "medium5": "64px",
                    "small1": "4px",
                    "small2": "8px",
                    "small3": "16px",
                    "small4": "24px",
                  },
                  "texts": Object {
                    "p1": Object {
                      "color": "#212632",
                      "fontSize": "14px",
                      "fontWeight": 400,
                      "lineHeight": "1.5",
                    },
                    "p1b": Object {
                      "color": "#212632",
                      "fontSize": "14px",
                      "fontWeight": 500,
                      "lineHeight": "1.5",
                    },
                    "p2": Object {
                      "color": "#212632",
                      "fontSize": "12px",
                      "fontWeight": 400,
                      "lineHeight": "1.5",
                    },
                    "p2b": Object {
                      "color": "#212632",
                      "fontSize": "12px",
                      "fontWeight": 500,
                      "lineHeight": "1.5",
                    },
                    "p3b": Object {
                      "color": "#212632",
                      "fontSize": "10px",
                      "fontWeight": 700,
                      "lineHeight": "1.5",
                    },
                  },
                }
              }
              viewBox="0 0 32 32"
            >
              <path
                clipRule="evenodd"
                d="M12.2 10a3.6 3.6 0 117.2 0 3.6 3.6 0 01-7.2 0zm3.6-6a6 6 0 100 12 6 6 0 000-12zM11 18.4a6 6 0 00-6 6v2.4a1.2 1.2 0 002.4 0v-2.4a3.6 3.6 0 013.6-3.6h9.6a3.6 3.6 0 013.6 3.6v2.4a1.2 1.2 0 002.4 0v-2.4a6 6 0 00-6-6H11z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Storyshots NavigationBar Sticky 1`] = `
<div
  style={
    Object {
      "height": "5000px",
    }
  }
>
  <nav
    className="NavigationBar__StyledNavigation-sc-8hnjeq-0 kDLOsO"
  >
    <div
      className="NavigationBar__NavigationLeft-sc-8hnjeq-1 BnMzB"
    >
      <div
        className="NavigationBar__NavigationLeftHeader-sc-8hnjeq-3 eeOMAI"
      >
        <svg
          fill="none"
          sticked={true}
          style={
            Object {
              "width": "100px",
            }
          }
          viewBox="0 0 99 25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 15L16.9998 5v20L0 15z"
            fill="#1778FB"
          />
          <path
            d="M0 4.98927L8.34259 0 17 5 0 15V4.98927z"
            fill="#48AAF1"
          />
          <path
            d="M33.6885 8.73502c.8565 0 1.624.19067 2.3026.57202.6785.38136 1.2068.91416 1.585 1.59836.3894.6842.584 1.4749.584 2.3722 0 .8973-.1946 1.6937-.584 2.3891-.3782.6842-.9065 1.2169-1.585 1.5983-.6786.3813-1.4461.572-2.3026.572-.634 0-1.218-.1234-1.7519-.3701-.5228-.2468-.9678-.6057-1.3348-1.0768V21H29V8.81914h1.535v1.41326c.356-.49353.8065-.86367 1.3515-1.11042.5451-.25798 1.1457-.38696 1.802-.38696zm-.1335 7.68878c.5673 0 1.0734-.129 1.5184-.387.456-.2692.812-.6393 1.0678-1.1104.267-.4823.4005-1.0319.4005-1.6488s-.1335-1.1609-.4005-1.632c-.2558-.4823-.6118-.8524-1.0678-1.1104-.445-.2579-.9511-.3869-1.5184-.3869-.5561 0-1.0623.1346-1.5183.4038-.4449.2579-.8009.6225-1.0679 1.0935-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.2559.4711.6118.8412 1.0679 1.1104.456.258.9622.387 1.5183.387zM44.1608 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4004.6842.6007 1.4637.6007 2.3386s-.2003 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8009.6281-1.0678 1.1104-.2559.4711-.3838 1.0151-.3838 1.632s.1279 1.1665.3838 1.6488c.2669.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM52.4994 10.3165c.2781-.51594.6897-.90851 1.2347-1.1777.545-.26919 1.2069-.40378 1.9855-.40378v1.56468c-.089-.0112-.2113-.0168-.367-.0168-.8677 0-1.5518.2635-2.0523.7907-.4894.516-.7342 1.2562-.7342 2.2208v4.4417h-1.6017V8.81914h1.535v1.49736zM63.0244 17.2145c-.2336.2019-.5228.3589-.8676.4711-.3448.1009-.7008.1514-1.0678.1514-.8899 0-1.5796-.2411-2.069-.7234-.4894-.4823-.7341-1.1721-.7341-2.0694v-4.8959h-1.5017V8.81914h1.5017V6.86751h1.6017v1.95163h2.5362v1.32916h-2.5362v4.8286c0 .4823.1168.8524.3504 1.1104.2447.258.5896.3869 1.0345.3869.4894 0 .9066-.1402 1.2514-.4206l.5005 1.1609zM68.1979 6.48055c-.9566 0-1.435.52155-1.435 1.56466v.77393h2.5696v1.32916h-2.5362v7.5878h-1.6018v-7.5878h-1.5016V8.81914h1.5016v-.79075c0-.88608.2559-1.5871.7676-2.10305.5116-.51595 1.2291-.77392 2.1523-.77392.356 0 .6897.04486 1.0011.13459.3115.08973.5785.21872.8009.38697l-.4838 1.22818c-.3671-.28041-.7787-.42061-1.2347-.42061zM74.5003 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8008.6281-1.0678 1.1104-.2558.4711-.3838 1.0151-.3838 1.632s.128 1.1665.3838 1.6488c.267.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM81.3039 5.25237h1.6018V17.7361h-1.6018V5.25237zM85.964 8.81914h1.6017v8.91696H85.964V8.81914zm.8009-1.71609c-.3115 0-.5729-.10095-.7842-.30284-.2003-.20189-.3004-.44865-.3004-.74027 0-.29163.1001-.53838.3004-.74028C86.192 5.10655 86.4534 5 86.7649 5c.3114 0 .5673.10095.7675.30284.2113.19068.317.43182.317.72345 0 .30284-.1057.56081-.317.77392-.2002.20189-.4561.30284-.7675.30284zM94.4116 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3893-.6954-.584-1.4805-.584-2.3554s.1947-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7008.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9343 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.535.3869c-.445.258-.8009.6281-1.0679 1.1104-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.267.4711.6229.8412 1.0679 1.1104.456.258.9677.387 1.535.387z"
            fill="#363C4B"
          />
        </svg>
      </div>
    </div>
    <div
      className="NavigationBar__NavigationRight-sc-8hnjeq-2 hIUtBj"
    />
  </nav>
</div>
`;

exports[`Storyshots NavigationBar Without Menu 1`] = `
<nav
  className="NavigationBar__StyledNavigation-sc-8hnjeq-0 jEBpfx"
>
  <div
    className="NavigationBar__NavigationLeft-sc-8hnjeq-1 BnMzB"
  >
    <div
      className="NavigationBar__NavigationLeftHeader-sc-8hnjeq-3 eeOMAI"
    >
      <svg
        fill="none"
        style={
          Object {
            "width": "100px",
          }
        }
        viewBox="0 0 99 25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 15L16.9998 5v20L0 15z"
          fill="#1778FB"
        />
        <path
          d="M0 4.98927L8.34259 0 17 5 0 15V4.98927z"
          fill="#48AAF1"
        />
        <path
          d="M33.6885 8.73502c.8565 0 1.624.19067 2.3026.57202.6785.38136 1.2068.91416 1.585 1.59836.3894.6842.584 1.4749.584 2.3722 0 .8973-.1946 1.6937-.584 2.3891-.3782.6842-.9065 1.2169-1.585 1.5983-.6786.3813-1.4461.572-2.3026.572-.634 0-1.218-.1234-1.7519-.3701-.5228-.2468-.9678-.6057-1.3348-1.0768V21H29V8.81914h1.535v1.41326c.356-.49353.8065-.86367 1.3515-1.11042.5451-.25798 1.1457-.38696 1.802-.38696zm-.1335 7.68878c.5673 0 1.0734-.129 1.5184-.387.456-.2692.812-.6393 1.0678-1.1104.267-.4823.4005-1.0319.4005-1.6488s-.1335-1.1609-.4005-1.632c-.2558-.4823-.6118-.8524-1.0678-1.1104-.445-.2579-.9511-.3869-1.5184-.3869-.5561 0-1.0623.1346-1.5183.4038-.4449.2579-.8009.6225-1.0679 1.0935-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.2559.4711.6118.8412 1.0679 1.1104.456.258.9622.387 1.5183.387zM44.1608 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4004.6842.6007 1.4637.6007 2.3386s-.2003 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8009.6281-1.0678 1.1104-.2559.4711-.3838 1.0151-.3838 1.632s.1279 1.1665.3838 1.6488c.2669.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM52.4994 10.3165c.2781-.51594.6897-.90851 1.2347-1.1777.545-.26919 1.2069-.40378 1.9855-.40378v1.56468c-.089-.0112-.2113-.0168-.367-.0168-.8677 0-1.5518.2635-2.0523.7907-.4894.516-.7342 1.2562-.7342 2.2208v4.4417h-1.6017V8.81914h1.535v1.49736zM63.0244 17.2145c-.2336.2019-.5228.3589-.8676.4711-.3448.1009-.7008.1514-1.0678.1514-.8899 0-1.5796-.2411-2.069-.7234-.4894-.4823-.7341-1.1721-.7341-2.0694v-4.8959h-1.5017V8.81914h1.5017V6.86751h1.6017v1.95163h2.5362v1.32916h-2.5362v4.8286c0 .4823.1168.8524.3504 1.1104.2447.258.5896.3869 1.0345.3869.4894 0 .9066-.1402 1.2514-.4206l.5005 1.1609zM68.1979 6.48055c-.9566 0-1.435.52155-1.435 1.56466v.77393h2.5696v1.32916h-2.5362v7.5878h-1.6018v-7.5878h-1.5016V8.81914h1.5016v-.79075c0-.88608.2559-1.5871.7676-2.10305.5116-.51595 1.2291-.77392 2.1523-.77392.356 0 .6897.04486 1.0011.13459.3115.08973.5785.21872.8009.38697l-.4838 1.22818c-.3671-.28041-.7787-.42061-1.2347-.42061zM74.5003 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3894-.6954-.584-1.4805-.584-2.3554s.1946-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7007.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9344 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.5351.3869c-.4449.258-.8008.6281-1.0678 1.1104-.2558.4711-.3838 1.0151-.3838 1.632s.128 1.1665.3838 1.6488c.267.4711.6229.8412 1.0678 1.1104.4561.258.9678.387 1.5351.387zM81.3039 5.25237h1.6018V17.7361h-1.6018V5.25237zM85.964 8.81914h1.6017v8.91696H85.964V8.81914zm.8009-1.71609c-.3115 0-.5729-.10095-.7842-.30284-.2003-.20189-.3004-.44865-.3004-.74027 0-.29163.1001-.53838.3004-.74028C86.192 5.10655 86.4534 5 86.7649 5c.3114 0 .5673.10095.7675.30284.2113.19068.317.43182.317.72345 0 .30284-.1057.56081-.317.77392-.2002.20189-.4561.30284-.7675.30284zM94.4116 17.837c-.8788 0-1.6685-.1963-2.3693-.5888-.7008-.3926-1.2514-.931-1.6518-1.6152-.3893-.6954-.584-1.4805-.584-2.3554s.1947-1.6544.584-2.3386c.4004-.6954.951-1.23378 1.6518-1.61513.7008-.39257 1.4905-.58885 2.3693-.58885.8787 0 1.6629.19628 2.3526.58885.7008.38135 1.2458.91973 1.6351 1.61513.4005.6842.6007 1.4637.6007 2.3386s-.2002 1.66-.6007 2.3554c-.3893.6842-.9343 1.2226-1.6351 1.6152-.6897.3925-1.4739.5888-2.3526.5888zm0-1.4132c.5673 0 1.0734-.129 1.5183-.387.4561-.2692.812-.6393 1.0679-1.1104.2558-.4823.3837-1.0319.3837-1.6488s-.1279-1.1609-.3837-1.632c-.2559-.4823-.6118-.8524-1.0679-1.1104-.4449-.2579-.951-.3869-1.5183-.3869s-1.079.129-1.535.3869c-.445.258-.8009.6281-1.0679 1.1104-.2558.4711-.3837 1.0151-.3837 1.632s.1279 1.1665.3837 1.6488c.267.4711.6229.8412 1.0679 1.1104.456.258.9677.387 1.535.387z"
          fill="#363C4B"
        />
      </svg>
    </div>
  </div>
  <div
    className="NavigationBar__NavigationRight-sc-8hnjeq-2 hIUtBj"
  />
</nav>
`;
